# java_tests

polygon_generator/: .gitignore  CMakeLists.txt  README.md
polygon_generator/cmake/: utils.cmake
polygon_generator/include/: testlib.h
polygon_generator/src/: main.cpp
polygon_generator/src/simple_generator/: simple_generator.cpp
src/java/ru/abrarov/topbuilder/: FrequencyAnalyzer.java  NaiveFrequencyAnalyzer.java  RandomSourceDataProvider.java  RandomUtils.java  UsageSample.java
src/tcp_proxy/java/ru/abrarov/javatests/tcpproxy/: Main.java
src/top_builder/java/ru/abrarov/javatests/topbuilder/: FrequencyAnalyzer.java  NaiveFrequencyAnalyzer.java  RandomSourceDataProvider.java  RandomUtils.java  UsageSample.java
src/top_builder/test/ru/abrarov/javatests/topbuilder/: NaiveFrequencyAnalyzerTest.java
test/ru/abrarov/topbuilder/: NaiveFrequencyAnalyzerTest.java
top-builder/: .gitignore  .project  pom.xml
top-builder/integration-test/: pom.xml
top-builder/integration-test/src/test/java/ru/abrarov/javatests/topbuilder/: NaiveFrequencyAnalyzerIntegrationTest.java
top-builder/src/main/java/ru/abrarov/javatests/topbuilder/: FrequencyAnalyzer.java  NaiveFrequencyAnalyzer.java
top-builder/src/main/java/ru/abrarov/javatests/topbuilder/example/: CollectionUtils.java  RandomSourceDataProvider.java  RandomUtils.java  UsageExample.java
top-builder/src/test/java/ru/abrarov/javatests/topbuilder/: NaiveFrequencyAnalyzerTest.java
top-builder/top-builder/: pom.xml
top-builder/top-builder/src/test/java/ru/abrarov/corejava/: AutoCloseableGuard.java  AutoCloseableParentTest.java  Derived.java  LeakDetectionSupportPool.java  LeakDetector.java  LeakageToken.java  Parent.java  Pool.java  Resource.java  TestException.java  Wrapper.java  WrapperBuilder.java
top-builder/top-builder/src/test/resources/: simplelogger.properties
windows_console_encoding/: .gitignore  pom.xml
windows_console_encoding/src/main/java/ru/abrarov/javatests/windows_console_encoding/: Main.java
(+6 files in other folders)
